added home page (orders list)

--- a/RepairWorkSoftwareWeb/Views/Home/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Home/Index.cshtml
@@ -2,30 +2,37 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<h2>Заказы</h2>
+<table id="order-table" class="table">
+    <thead>
+        <tr><th>ФИО клиента</th><th>Услуга</th><th>Количество</th><th>Сумма</th><th>Статус</th><th>Дата создания</th><th>Дата выполнения</th></tr>
+    </thead>
+    <tbody>
+        <tr id="order-list"></tr>
+    </tbody>
+</table>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<script>
+    $(function() {
+        $("#refreshOrders_Button").click(function() {
+            $.getJSON("/home/Orders", null, fillList);
+    });
+});
+</script>
+
+<script>
+    function fillList(orders) {
+        $("#order-list").text("");
+        $.each(orders, function(i) {
+            $("#order-list").append("<td>" + this.CustomerFIO + "</td>");
+            $("#order-list").append("<td>" + this.WorkName + "</td>");
+            $("#order-list").append("<td>" + this.Count + "</td>");
+            $("#order-list").append("<td>" + this.Sum + "</td>");
+            $("#order-list").append("<td>" + this.Status + "</td>");
+            $("#order-list").append("<td>" + this.DateCreate + "</td>");
+            $("#order-list").append("<td>" + this.DateImplement + "</td>");
+        });
+    }
+</script>
+
+<input type="button" id="refreshOrders_Button" value="Обновить" />
