--- a/RepairWorkSoftwareWeb/Views/Home/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
 <script>
     $(function () {
         $("#createOrder_Button").click(function () {
-            window.open("/home/Order", "_self")
+            window.open("/order/Index", "_self")
         });
     });
 </script>
