Added create customer window

--- a/RepairWorkSoftwareWeb/Views/Shared/_Layout.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle">Справочники<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/home/customers">Клиенты</a></li>
+                            <li><a href="/customer/Index">Клиенты</a></li>
                             <li><a href="/home/materials">Материалы</a></li>
                             <li><a href="/home/works">Услуги</a></li>
                         </ul>
