Fix view of all tables

--- a/RepairWorkSoftwareWeb/Views/Customer/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Customer/Index.cshtml
@@ -7,8 +7,7 @@
     <thead>
         <tr><th>ФИО клиента</th></tr>
     </thead>
-    <tbody>
-        <tr id="customer-list"></tr>
+    <tbody id="customer-list">
     </tbody>
 </table>
 
@@ -32,19 +31,10 @@
     function fillList(customers) {
         $("#customer-list").text("");
         $.each(customers, function (i) {
-            $("#customer-list").append("<td>" + this.CustomerFIO + "</td>");
+            $("#customer-list").append("<tr><td>" + this.CustomerFIO + "</td></tr>");
         });
     }
 </script>
 
-<script>
-    $(function () {
-        $("#back_Button").click(function () {
-            window.open("/customer/Index", "_self")
-        });
-    });
-</script>
-
 <input type="button" id="createCustomer_Button" value="Создать" />
 <input type="button" id="refreshCustomer_Button" value="Обновить" />
-<input type="button" id="back_Button" value="Назад" />
