--- a/RepairWorkSoftwareWeb/Views/Shared/_Layout.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Shared/_Layout.cshtml
@@ -27,8 +27,8 @@
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle">Справочники<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="/customer/Index">Клиенты</a></li>
-                            <li><a href="/home/materials">Материалы</a></li>
-                            <li><a href="/home/works">Услуги</a></li>
+                            <li><a href="/material/Index">Материалы</a></li>
+                            <li><a href="/work/Index">Услуги</a></li>
                         </ul>
                     </li>
                 </ul>
