--- a/RepairWorkSoftwareWeb/Views/Work/EditWork.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Work/EditWork.cshtml
@@ -19,7 +19,7 @@
     </div>
     <table id="materialwork-table" class="table">
         <thead>
-            <tr><th>Название материала</th><th>Количество</th></tr>
+            <tr><th></th><th>Название материала</th><th>Количество</th></tr>
         </thead>
         <tbody id="materialwork-list"></tbody>
     </table>
@@ -27,6 +27,17 @@
 </form>
 
 
+
+<script>
+    $.getJSON("/material/GetAllMaterials", null, fillMaterialsSelectForm);
+
+    function fillMaterialsSelectForm(materials) {
+        $("#materialName_Select").text("");
+        $.each(materials, function (i) {
+            $("#materialName_Select").append("<option value=\"" + this.Id + "\">" + this.MaterialName + "</option>");
+        });
+    }
+</script>
 
 <div class="modal fade" id="addMaterial_Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -39,7 +50,7 @@
             </div>
             <div class="modal-body">
                 <label for="MaterialName">Название материала</label>
-                <input type="text" class="form-control" id="materialName_Input" name="MaterialName">
+                <select class="form-control" name="MaterialName" id="materialName_Select"></select>
 
                 <label for="MaterialCount">Количество</label>
                 <input type="text" class="form-control" id="materialCount_Input" name="MaterialCount">
@@ -56,7 +67,8 @@
     $(function () {
         $("#addMaterial_Button").click(function () {
             $("#materialwork-list").append(
-                "<tr><td><input style=\"border: none\" readonly=\"readonly\" type=\"text\" name=\"model.WorkMaterials[" + materialIndex + "].MaterialName\" value=\"" + $("#materialName_Input").val() + "\" /></td>" +
+                "<tr><td><input style=\"border: none; display: none;\" readonly=\"readonly\" type=\"text\" name=\"model.WorkMaterials[" + materialIndex + "].MaterialId\" value=\"" + $("#materialName_Select").val() + "\" /></td>" +
+                "<td><input style=\"border: none\" readonly=\"readonly\" type=\"text\" name=\"model.WorkMaterials[" + materialIndex + "].MaterialName\" value=\"" + $("#materialName_Select option:selected").text() + "\" /></td>" +
                 "<td><input style=\"border: none\" readonly=\"readonly\" type=\"text\" name=\"model.WorkMaterials[" + materialIndex++ + "].Count\" value=\"" + $("#materialCount_Input").val() + "\" /></td></tr>"
             );
         });
