--- a/RepairWorkSoftwareWeb/Views/Work/EditWork.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Work/EditWork.cshtml
@@ -8,7 +8,7 @@
 
 <h2>Редактирование услуги</h2>
 
-<form action="/work/Post" method="post">
+<form action="/work/Index" method="post">
     <div class="form-group">
         <label for="WorkName">Название услуги</label>
         <input type="text" class="form-control" name="model.WorkName">
