--- a/RepairWorkSoftwareWeb/Views/Order/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Order/Index.cshtml
@@ -37,9 +37,9 @@
     </div>
     <div class="form-group">
         <label for="sum_Input">Сумма</label>
-        <input type="text" class="form-control" name="sum_Input">
+        <input type="text" class="form-control" name="Sum">
     </div>
-    <input id="create_Button" type="button" value="Sum" />
+    <input id="create_Button" type="button" value="Создать" />
 </form>
 
 <script type="text/javascript">
