--- a/RepairWorkSoftwareWeb/Views/Customer/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Customer/Index.cshtml
@@ -7,9 +7,45 @@
     <thead>
         <tr><th>ФИО клиента</th></tr>
     </thead>
-    <tbody id="customer-list">
-    </tbody>
+    <tbody id="customer-list"></tbody>
 </table>
+
+<div class="modal fade" id="addCustomer_Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">Редактирование пользователя</h4>
+            </div>
+            <div class="modal-body">
+                <form id="customerForm">
+                    <div class="form-group">
+                        <label for="CustomerFIO">ФИО пользователя</label>
+                        <input type="text" class="form-control" id="customerFIO_Input" name="CustomerFIO">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть окно</button>
+                <button type="button" id="addCustomer_Button" class="btn btn-primary">Добавить</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    $('#addCustomer_Button').click(function () {
+        $.post("/api/customerRest",
+            $("#customerForm").serialize(),
+            function (value) {
+                $("#refreshCustomer_Button").click();
+            },
+            "json"
+        );
+    });
+</script>
 
 <script>
     $(function () {
@@ -17,17 +53,7 @@
             $.getJSON("/customer/GetAllCustomers", null, fillList);
         });
     });
-</script>
 
-<script>
-    $(function () {
-        $("#createCustomer_Button").click(function () {
-            window.open("/customer/EditCustomer", "_self")
-        });
-    });
-</script>
-
-<script>
     function fillList(customers) {
         $("#customer-list").text("");
         $.each(customers, function (i) {
@@ -36,5 +62,5 @@
     }
 </script>
 
-<input type="button" id="createCustomer_Button" value="Создать" />
+<button type="button" id="createCustomer_Button" data-toggle="modal" data-target="#addCustomer_Modal">Добавить клиента</button>
 <input type="button" id="refreshCustomer_Button" value="Обновить" />
