Added autoupdate components on window

--- a/RepairWorkSoftwareWeb/Views/Customer/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Customer/Index.cshtml
@@ -64,3 +64,9 @@
 
 <button type="button" id="createCustomer_Button" data-toggle="modal" data-target="#addCustomer_Modal">Добавить клиента</button>
 <input type="button" id="refreshCustomer_Button" value="Обновить" />
+
+<script>
+    window.onload = function() {
+        $("#refreshCustomer_Button").click();
+    };
+</script>
