--- a/RepairWorkSoftwareWeb/Views/Home/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Home/Index.cshtml
@@ -45,3 +45,9 @@
 
 <input type="button" id="createOrder_Button" value="Создать заказ" />
 <input type="button" id="refreshOrders_Button" value="Обновить" />
+
+<script>
+    window.onload = function () {
+        $("#refreshOrders_Button").click();
+    };
+</script>
