--- a/RepairWorkSoftwareWeb/Views/Material/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Material/Index.cshtml
@@ -65,3 +65,9 @@
 
 <input type="button" id="createMaterial_Button" value="Добавить материал" data-toggle="modal" data-target="#addMaterial_Modal" />
 <input type="button" id="refreshMaterial_Button" value="Обновить" />
+
+<script>
+    window.onload = function () {
+        $("#refreshMaterial_Button").click();
+    };
+</script>
