--- a/RepairWorkSoftwareWeb/Views/Work/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Work/Index.cshtml
@@ -41,3 +41,9 @@
 
 <input type="button" id="createWork_Button" value="Добавить" />
 <input type="button" id="refreshWork_Button" value="Обновить" />
+
+<script>
+    window.onload = function () {
+        $("#refreshWork_Button").click();
+    };
+</script>
