--- a/RepairWorkSoftwareWeb/Views/Shared/_Layout.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
+    <link href="@Url.Content("~/Content/main.css")" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
