--- a/RepairWorkSoftwareWeb/Views/Material/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Material/Index.cshtml
@@ -5,10 +5,9 @@
 <h2>Материалы</h2>
 <table id="material-table" class="table">
     <thead>
-        <tr><th>Название материала</th></tr>
+        <tr><th>Id</th><th>Название материала</th></tr>
     </thead>
-    <tbody id="material-list">
-    </tbody>
+    <tbody id="material-list"></tbody>
 </table>
 
 <div class="modal fade" id="addMaterial_Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -25,6 +24,8 @@
                     <div class="form-group">
                         <label for="MaterialName">Название материала</label>
                         <input type="text" class="form-control" id="materialName_Input" name="MaterialName">
+                        <label hidden="hidden" for="materialId_Input">Id</label>
+                        <input type="hidden" class="form-control" id="materialId_Input" name="Id">
                     </div>
                 </form>
             </div>
@@ -36,18 +37,6 @@
     </div>
 </div>
 
-<script type="text/javascript">
-    $('#addMaterial_Button').click(function () {
-        $.post("/api/materialRest",
-            $("#materialForm").serialize(),
-            function (value) {
-                $("#refreshMaterial_Button").click();
-            },
-            "json"
-        );
-    });
-</script>
-
 <script>
     $(function () {
         $("#refreshMaterial_Button").click(function () {
@@ -58,16 +47,84 @@
     function fillList(materials) {
         $("#material-list").text("");
         $.each(materials, function (i) {
-            $("#material-list").append("<tr><td>" + this.MaterialName + "</td></tr>");
+            $("#material-list").append(
+                "<tr><td>" + this.Id + "</td>" +
+                "<td>" + this.MaterialName + "</td></tr>"
+            );
         });
     }
 </script>
 
 <input type="button" id="createMaterial_Button" value="Добавить материал" data-toggle="modal" data-target="#addMaterial_Modal" />
+<button type="button" id="editMaterial_Button" data-toggle="modal" data-target="#addMaterial_Modal">Изменить</button>
+<button type="button" id="delMaterial_Button">Удалить</button>
 <input type="button" id="refreshMaterial_Button" value="Обновить" />
+
+<script type="text/javascript">
+    $('#addMaterial_Button').click(function () {
+        $.post("/api/materialRest",
+            $("#materialForm").serialize(),
+            function (value) {
+                $("#refreshMaterial_Button").click();
+            },
+            "json"
+        );
+    });
+
+    $(function () {
+        $("#createMaterial_Button").click(function () {
+            $("#materialId_Input").val("");
+            $("#materialName_Input").val("");
+        });
+    });
+
+    $(function () {
+        $("#editMaterial_Button").click(function () {
+            $("#materialId_Input").val($("tr.selected td:nth-child(1)").html());
+            $("#materialName_Input").val($("tr.selected td:nth-child(2)").html());
+        });
+    });
+
+    $("#delMaterial_Button").click(function () {
+        var materialId = $("tr.selected td:nth-child(1)").html();
+        var materialName = $("tr.selected td:nth-child(2)").html();
+
+        var myData = {};
+        myData.Id = materialId;
+        myData.MaterialName = materialName;
+
+        $.ajax({
+            type: 'PUT',
+            async: true,
+            dataType: "json",
+            url: "/api/materialRest/delete",
+            data: myData,
+            success: function (data) {
+                $("#refreshMaterial_Button").click();
+                console.log(data);
+            },
+            error: function (err) {
+                console.log(err);
+            }
+        });
+    });
+</script>
 
 <script>
     window.onload = function () {
         $("#refreshMaterial_Button").click();
     };
+</script>
+
+
+
+@* Для выделения строк таблицы *@
+<script>
+    function highlight(e) {
+        if (selected[0]) selected[0].className = '';
+        e.target.parentNode.className = 'selected';
+    }
+
+    var table = document.getElementById('material-table'), selected = table.getElementsByClassName('selected');
+    table.onclick = highlight;
 </script>
