--- a/RepairWorkSoftwareWeb/Views/Home/Index.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Home/Index.cshtml
@@ -5,16 +5,23 @@
 <h2>Заказы</h2>
 <table id="order-table" class="table">
     <thead>
-        <tr><th>ФИО клиента</th><th>Услуга</th><th>Количество</th><th>Сумма</th><th>Статус</th><th>Дата создания</th><th>Дата выполнения</th></tr>
+        <tr><th>Id</th><th>ФИО клиента</th><th>Услуга</th><th>Количество</th><th>Сумма</th><th>Статус</th><th>Дата создания</th><th>Дата выполнения</th></tr>
     </thead>
-    <tbody id="order-list">
-
-    </tbody>
+    <tbody id="order-list"></tbody>
 </table>
 
+<button type="button" id="createOrder_Button">Создать</button>
+<input type="button" id="refreshOrders_Button" value="Обновить" />
+
 <script>
-    $(function() {
-        $("#refreshOrders_Button").click(function() {
+    $(function () {
+        $("#createOrder_Button").click(function () {
+            window.open("/order/Index", "_self")
+        });
+    });
+
+    $(function () {
+        $("#refreshOrders_Button").click(function () {
             $.getJSON("/home/GetAllOrders", null, fillList);
         });
     });
@@ -23,31 +30,34 @@
         $("#order-list").text("");
         $.each(orders, function (i) {
             $("#order-list").append(
-                "<tr><td>" + this.CustomerFIO + "</td>" + 
+                "<tr>" +
+                "<td>" + this.Id + "</td>" +
+                "<td>" + this.CustomerFIO + "</td>" +
                 "<td>" + this.WorkName + "</td>" +
-                "<td>" + this.Count + "</td>" + 
+                "<td>" + this.Count + "</td>" +
                 "<td>" + this.Sum + "</td>" +
                 "<td>" + this.Status + "</td>" +
                 "<td>" + this.DateCreate + "</td>" +
-                "<td>" + this.DateImplement + "</td></tr>"
+                "<td>" + this.DateImplement + "</td>" +
+                "</tr>"
             );
         });
     }
 </script>
 
 <script>
-    $(function () {
-        $("#createOrder_Button").click(function () {
-            window.open("/order/Index", "_self")
-        });
-    });
-</script>
-
-<input type="button" id="createOrder_Button" value="Создать заказ" />
-<input type="button" id="refreshOrders_Button" value="Обновить" />
-
-<script>
     window.onload = function () {
         $("#refreshOrders_Button").click();
     };
+</script>
+
+@* Для выделения строк таблицы *@
+<script>
+    function highlight(e) {
+        if (selected[0]) selected[0].className = '';
+        e.target.parentNode.className = 'selected';
+    }
+
+    var table = document.getElementById('order-table'), selected = table.getElementsByClassName('selected');
+    table.onclick = highlight;
 </script>
