--- a/RepairWorkSoftwareWeb/Views/Work/EditWork.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Work/EditWork.cshtml
@@ -21,9 +21,18 @@
         <thead>
             <tr><th>Id</th><th>Название материала</th><th>Количество</th><th>Удалить</th><th>Редактировать</th></tr>
         </thead>
-        <tbody id="materialwork-list"></tbody>
+        <tbody id="materialwork-list">
+            <tr>
+                
+                <td><input style="border: none;" readonly="readonly" type="text" name="model.WorkMaterials[1].MaterialId" value="1"/></td>
+                <td><input style="border: none;" readonly="readonly" type="text" name="model.WorkMaterials[1].MaterialName" value="Материал #1"/></td>
+                <td><input style="border: none;" readonly="readonly" type="text" name="model.WorkMaterials[1].Count" value="444"/></td>
+                <td><button onclick="deleteRow_Func(this)" type="button">-d</button></td>
+                <td><button onclick="editRow_Func(this)" data-toggle="modal" data-target="#addMaterial_Modal" type="button">-e</button></td>
+            </tr>
+        </tbody>
     </table>
-    <input type="submit" value="Save" />
+    <input type="submit" value="Сохранить" />
 </form>
 
 
@@ -56,7 +65,7 @@
                 <input type="text" class="form-control" id="materialCount_Input" name="MaterialCount">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть окно</button>
+                <button type="button" id="closeModalWindow_Button" class="btn btn-secondary" data-dismiss="modal">Закрыть окно</button>
                 <button type="button" id="addMaterial_Button" class="btn btn-primary">Добавить</button>
             </div>
         </div>
@@ -71,20 +80,43 @@
                 "<td><input style=\"border: none;\" readonly=\"readonly\" type=\"text\" name=\"model.WorkMaterials[" + materialIndex + "].MaterialId\" value=\"" + $("#materialName_Select").val() + "\" /></td>" +
                 "<td><input style=\"border: none;\" readonly=\"readonly\" type=\"text\" name=\"model.WorkMaterials[" + materialIndex + "].MaterialName\" value=\"" + $("#materialName_Select option:selected").text() + "\" /></td>" +
                 "<td><input style=\"border: none;\" readonly=\"readonly\" type=\"text\" name=\"model.WorkMaterials[" + materialIndex++ + "].Count\" value=\"" + $("#materialCount_Input").val() + "\" /></td>" +
-                "<td><button onclick=\"deleteRow_Func(this)\" type=\"button\">-</button></td>" +
+                "<td><button onclick=\"deleteRow_Func(this)\" type=\"button\">-d</button></td>" +
+                "<td><button onclick=\"editRow_Func(this)\" data-toggle=\"modal\" data-target=\"#addMaterial_Modal\" type=\"button\">-e</button></td>" +
                 "</tr>"
             );
+            
+            document.getElementById('closeModalWindow_Button').disabled = false;
         });
     });
 </script>
+
+<button type="button" id="addMaterialWork_Button" data-toggle="modal" data-target="#addMaterial_Modal">Добавить</button>
 
 <script>
     function deleteRow_Func(ctl) {
         $(ctl).parents("tr").remove();
     }
+
+    function editRow_Func(ctl) {
+        var cols = $(ctl).parents("tr").children("td");
+        var materialCount = $(cols[2]).find('input').val();
+        var materialId = $(cols[0]).find('input').val();
+
+        $("#materialCount_Input").val(materialCount);
+        $("#materialName_Select").val(materialId);
+
+        deleteRow_Func(ctl);
+
+        document.getElementById('closeModalWindow_Button').disabled = true;
+    };
 </script>
 
-<button type="button" data-toggle="modal" data-target="#addMaterial_Modal">Добавить</button>
+<script>
+    $("#addMaterialWork_Button").click(function () {
+        $("#materialCount_Input").val("");
+        $("#materialName_Select").val("");
+    });
+</script>
 
 @* Для выделения строк таблицы *@
 <script>
